logs/action_web_build_base_core_ecc_main.log
2026-02-23 20:28:38,928 - ERROR - Compilation failed for core_ecc_main:
2026-02-23 20:28:38,929 - ERROR - shared:INFO: (Emscripten: Running sanity checks)
/home/runner/work/NextSSL/NextSSL/src/primitives/ecc/elligator2/elligator2.c:88:36: error: unknown type name 'size_t'
   88 | static void wipe_buffer(void *buf, size_t size) {
      |                                    ^
1 error generated.
emcc: error: '/home/runner/work/NextSSL/NextSSL/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/runner/work/NextSSL/NextSSL/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O2 -Wall -I/home/runner/work/NextSSL/NextSSL/src -I/home/runner/work/NextSSL/NextSSL/src/include -I/home/runner/work/NextSSL/NextSSL/src/primitives -I/home/runner/work/NextSSL/NextSSL/src/primitives/hash/fast/blake3 -I/home/runner/work/NextSSL/NextSSL/src/primitives/hash/memory_hard/utils -I/home/runner/work/NextSSL/NextSSL/src/legacy/alive -I/home/runner/work/NextSSL/NextSSL/src/legacy/unsafe -I/home/runner/work/NextSSL/NextSSL/src/utils -I/home/runner/work/NextSSL/NextSSL/src/primitives/ecc/ed25519 -I/home/runner/work/NextSSL/NextSSL/src/primitives/ecc/curve448 -I/home/runner/work/NextSSL/NextSSL/src/primitives/ecc/elligator2 -I/home/runner/work/NextSSL/NextSSL/src/primitives/ecc/ristretto255 -I/home/runner/work/NextSSL/NextSSL/src/primitives/cipher/aes_core -I/home/runner/work/NextSSL/NextSSL/src/utils/drbg -I/home/runner/work/NextSSL/NextSSL/src/primitives/hash/sponge_xof/shake -I/home/runner/work/NextSSL/NextSSL/src -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512 -DBLAKE3_NO_SSE2 -DBLAKE3_NO_SSE41 -DBLAKE3_NO_THREADING -DBLAKE3_ATOMICS=0 -DEXCLUDE_SPHINCS -DHAVE_ED448=1 /home/runner/work/NextSSL/NextSSL/src/primitives/ecc/elligator2/elligator2.c -c -o /tmp/emscripten_temp_4g0ztwwe/elligator2_15.o' failed (returned 1)

